# ShitVM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: README.md  Roadmap.md  ShitBC.md  ShitBF.md
include/svm/: ByteFile.hpp  ConstantPool.hpp  Exception.hpp  Function.hpp  GarbageCollector.hpp  Heap.hpp  IO.hpp  Instruction.hpp  Interpreter.cpp  Interpreter.hpp  Loader.hpp  Macro.hpp  Memory.hpp  Module.hpp  Object.hpp  Parser.hpp  ProgramOption.hpp  Stack.hpp  Structure.hpp  Type.hpp  Version.hpp
include/svm/detail/: FileSystem.hpp  InterpreterExceptionCode.hpp  Overload.hpp  ReferenceWrapper.hpp
include/svm/gc/: SimpleGarbageCollector.hpp
include/svm/jit/: Engine.hpp  (+4 more)
src/: ByteFile.cpp  ConstantPool.cpp  Exception.cpp  Function.cpp  GarbageCollector.cpp  Heap.cpp  IO.cpp  Instruction.cpp  Interpreter.cpp  Loader.cpp  Main.cpp  Memory.cpp  Module.cpp  Object.cpp  Parser.cpp  ProgramOption.cpp  ShitVMVersion.cpp  Stack.cpp  Structure.cpp  Type.cpp  Version.cpp
src/gc/: SimpleGarbageCollector.cpp
src/inst/: inst-Control.cpp  inst-Memory.cpp  inst-Operation.cpp  inst-Stack.cpp  inst-TypeCast.cpp
src/instructions/: Control.cpp  Operation.cpp  Stack.cpp  TypeCast.cpp  instructions-Control.cpp  instructions-Memory.cpp  instructions-Operation.cpp  instructions-Stack.cpp  instructions-TypeCast.cpp
src/jit/: Engine.cpp  jit-Function.cpp
src/sco/: CMakeLists.txt
src/sgn/: CMakeLists.txt
src/svm/: CMakeLists.txt  ConstantPool.cpp  Function.cpp  Memory.cpp
src/virtual/: VirtualContext.cpp  VirtualFunction.cpp  VirtualModule.cpp  VirtualObject.cpp  VirtualStack.cpp
(+32 files in other folders)
